Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.9.12 (2010/01/12)

      - LP #491224: proper escaping of rendered error message

  Zope 2.9.11 (2009/08/06)

   Bugs fixed

      - Launchpad #373299: Removed bogus string exception in OFS.CopySupport.

      - Launchpad ##332168: Connection.py: do not expose DB connection strings
        through exceptions

      - Fixed vulnerabilities in the ZEO network protocol 
        affecting ZEO storage servers.

  Zope 2.9.10 (2008/10/24)

   Bugs fixed

      - Ensure that response header values cannot embed CRLF pairs, which
        violate the HTTP spec (RFC 2616).

      - Launchpad #282677: fixed implementation of guarded_map and
        provided tests and implementation for guarded_zip
        (RestrictedPython).

      - 'AccessControl.ZopeGuards.guarded_import' mapped some Unauthorized
        exceptions onto ImportErrors:  don't do that!  Also, removed
        mutable defaults from argument list, improved tests.

      - LP #281156:  'AccessControl.SecurityInfo.secureModule' dropped
        ModuleSecurity for failed imports, obscuring later attempts to
        import the same broken module.

      - LP #142667:  Updated to ZODB-3.6.4 to fix problem with product
        auto-refresh.

      - Launchpad #267545: DateTime(DateTime()) now preserves the
        correct hour

      - Launchpad #245649:  the Products package is now a proper
        "namespace package" under the rules specified by setuptools.

      - Launchpad #239636:  Ensure that HEAD requests lock an empty body
        for NotFound errors.

      - Launchpad #234209: De-tabify ZPublisher/HTTPRequest.py

      - integrated Hotfix-2008-08-12

  Zope 2.9.9 (2008/05/10)

   Bugs fixed

      - Launchpad #142350: Display description for properties as row title,
        if present.
